Fix menu switching
- Wasn't showing between 400 and 500px cause image covered it
- An incorrect {} made it always "shown", but hidden behind the image
- There was a weird overflow of the regular nav between 600 and 615 px

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -23,6 +23,7 @@
   flex-direction: row;
   justify-content: flex-end;
   align-items: flex-end;
+  overflow: hidden;
 }
 
 .imgHeaderLogo {
